--- a/Client/Dockerfile
+++ b/Client/Dockerfile
@@ -1,11 +1,13 @@
-FROM python:3.10-slim
+FROM python:3.10-buster
 
 WORKDIR /app
 
-COPY ./ ./
+COPY ./requirements.txt ./
 
 RUN pip3 install -r requirements.txt
 
+COPY ./ ./
+
 EXPOSE 5000
 
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
