--- a/Client/docker-compose.yml
+++ b/Client/docker-compose.yml
@@ -8,3 +8,21 @@ services:
     container_name: pythonFlaskApp
     ports:
       - "80:5000"
+    depends_on:
+      - db
+    environment:
+      MYSQL_HOST: 'db'
+  db:
+    image: mysql:5.7
+    container_name: mysqldb
+    environment:
+      MYSQL_DATABASE: 'db'
+      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_HOST: 'localhost'
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+    volumes:
+      - dbdata:/var/lib/mysql
+    ports:
+      - "3306:3306"
+volumes:
+  dbdata:
