--- a/Client/requirements.txt
+++ b/Client/requirements.txt
@@ -1,3 +1,7 @@
-Flask==3.0.0
-WTForm
-Flask-WTF
+flask-mysqldb
+scikit-learn==1.3.1
+flask==3.0.0
+pandas==2.1.1
+WTForm==1.0
+Flask-WTF==1.2.1
+flask_sqlalchemy==3.1.1
