--- a/DockerTest/Server/Dockerfile
+++ b/DockerTest/Server/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM python:3.10
+FROM python:3.10-buster
 
 # Set the working directory in the container
 WORKDIR /app
