--- a/TrainingScript/Dockerfile.x86
+++ b/TrainingScript/Dockerfile.x86
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM arm64v8/python:3.10-slim-buster
+FROM python:3.10-slim-buster
 
 # Set the working directory in the container
 WORKDIR /app
@@ -12,4 +12,4 @@ RUN pip3 install -r requirements.txt
 COPY . .
 
 # Specify the command to run your Python script
-CMD ["python", "train.py"]
+CMD ["python", "-u", "train.py"]
