--- a/Server/Dockerfile.arm64
+++ b/Server/Dockerfile.arm64
@@ -11,4 +11,4 @@ COPY . .
 RUN pip3 install -r requirements.txt
 
 # Specify the command to run your Python script
-CMD ["python", "FD_server.py"]
+CMD ["python","-u", "FD_server.py"]
