--- a/Client/postgres-deployment.yml
+++ b/Client/postgres-deployment.yml
@@ -60,7 +60,7 @@ spec:
           lifecycle:
             postStart:
               exec:
-                command: ["/bin/sh","-c","sleep 20 && PGPASSWORD=$POSTGRES_PASSWORD psql -w -d $POSTGRES_DB -U $POSTGRES_USER -c 'CREATE TABLE IF NOT EXISTS patient (id SERIAL PRIMARY KEY, high_bp REAL NOT NULL, high_chol REAL NOT NULL, chol_check REAL NOT NULL, bmi REAL NOT NULL CHECK (bmi >= 0.0 AND bmi <= 251.1), smoker REAL NOT NULL, stroke REAL NOT NULL, heart_disease_or_attack REAL NOT NULL, phys_activity REAL NOT NULL, fruits REAL NOT NULL, veggies REAL NOT NULL, hvy_alcohol_consump REAL NOT NULL, phys_hlth REAL NOT NULL, diff_walk REAL NOT NULL, sex REAL NOT NULL, age REAL NOT NULL, label REAL NULL, labelled BOOL NOT NULL, sent BOOL NOT NULL);'"]
+                command: ["/bin/sh","-c","sleep 20 && PGPASSWORD=$POSTGRES_PASSWORD psql -w -d $POSTGRES_DB -U $POSTGRES_USER -c 'CREATE TABLE IF NOT EXISTS patient (id SERIAL PRIMARY KEY, high_bp REAL NOT NULL, high_chol REAL NOT NULL, chol_check REAL NOT NULL, bmi REAL NOT NULL CHECK (bmi >= 0.0 AND bmi <= 251.1), smoker REAL NOT NULL, stroke REAL NOT NULL, heart_disease_or_attack REAL NOT NULL, phys_activity REAL NOT NULL, fruits REAL NOT NULL, veggies REAL NOT NULL, hvy_alcohol_consump REAL NOT NULL, phys_hlth REAL NOT NULL, diff_walk REAL NOT NULL, sex REAL NOT NULL, age REAL NOT NULL, label REAL NULL, labelled BOOL NOT NULL, sent BOOL NOT NULL); CREATE TABLE IF NOT EXISTS localmodel(id SERIAL PRIMARY KEY, timestamp TIMESTAMP NOT NULL, localpickle TEXT NOT NULL); CREATE TABLE IF NOT EXISTS referencemodel(id SERIAL PRIMARY KEY, timestamp TIMESTAMP NOT NULL, referencepickle TEXT NOT NULL);'"]
           ports:
             - containerPort: 5432
           env:
