--- a/Client/postgres-deployment.yml
+++ b/Client/postgres-deployment.yml
@@ -44,7 +44,7 @@ kind: Deployment
 metadata:
   name: postgres
 spec:
-  replicas: 3
+  replicas: 3 # For High Availibility
   selector:
     matchLabels:
       app: postgres
