Added flexibility for custom domain

--- a/Client/flask-deployment.yml
+++ b/Client/flask-deployment.yml
@@ -20,6 +20,8 @@ spec:
           env:
             - name: DATABASE_URL
               value: "postgresql://user:password@postgres-service:5432/mydatabase"
+            - name: DOMAIN
+              value: "dereknan.click"
 ---
 apiVersion: v1
 kind: Service
