--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -2,3 +2,6 @@ grpcio==1.59.0
 grpcio-tools==1.59.0
 pandas==2.1.1
 scikit-learn==1.3.1
+psycopg2-binary==2.9.9
+flask_sqlalchemy==3.1.1
+flask==3.0.0
