--- a/TestResults/docker-compose.yml
+++ b/TestResults/docker-compose.yml
@@ -4,5 +4,7 @@ services:
   model-training-app:
     image: dereknan/model-test-x86:latest
     container_name: FDModelTest
+    environment:
+      - MODEL=model.pkl
     volumes:
       - /path/on/host:/model
